--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
+	<div class="container">
+		<button type="buttton" class="button" onClick="myFunction">Click Me!</button>
+	</div>
 
+<script src="./script.js"></script>
 </body>
 </html>
