1.Added jQuery file 2.random color by Math.random() function

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
 	<div class="container">
-		<button type="buttton" class="button" onClick="myFunction">Click Me!</button>
+		<button type="buttton" class="button">Click Me!</button>
 	</div>
 
+
+<script src="./jquery-3.3.1.min.js"></script>
 <script src="./script.js"></script>
 </body>
 </html>
